slight bug-fixes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </label>
                     <button class="cell">Search</button>
                   </div>
-                  <div class="smallscreen">
+                  <div class="bigscreen">
                     <h5 class="">Favorited Items</h3>
                     <br>
                     <h5>Search for it again</h5>
