--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p id="instruction">Search for items by keyword below and your results will be shown in the columns to the right.</p>
                 <label>Keyword
 
-                <input id="search" type="text" name="keyword" placeholder="Search by Keyword">
+                <input id="search2" type="text" name="keyword" placeholder="Search by Keyword">
                 </label>
-                <button id="btn" class="cell">Search</button>
+                <button id="btn2" class="cell">Search</button>
             </div>
         </div>
 
