adding recent search dropdown menu

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     </label>
                     <button id="btn" class="cell">Search</button>
                   </div>
-                  <div class="bigscreen">
-                    <h5 class="">Favorited Items</h3>
+                  <div  class="bigscreen">
+                    <h5>Favorited Items</h3>
                     <br>
-                    <h5>Search for it again</h5>
-                </div>       
+                    <select name="" id="searchedItems"></select>
+                  </div>       
             </div>
 
             <div id="ebayResults" class="cell small-5 large-expand results">
