fetch from streaming api

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="cell small-6 search">
             <div class="row columns ">
                 <p id="instruction">Search for items by keyword below and your results will be shown in the columns to the right.</p>
-                <label>Keyword
+                <label>Zip-Code
 
-                <input id="search2" type="text" name="keyword" placeholder="Search by Keyword">
+                <input id="search2" type="text" name="keyword" placeholder="Enter Your Zip-Code">
                 </label>
                 <button id="btn2" class="cell">Search</button>
             </div>
@@ -86,11 +86,3 @@
   </body>
 </html>
 
-<<<<<<< HEAD
-=======
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
-</body>
-</html>
->>>>>>> craiglist-api
