add restaurant api and create restaurant list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="grid-x grid-padding-x">
-      <h1>Classifieds Search</h1>
+      <h1>A Night In</h1>
     </header>
         
     <section class="grid-x smallscreen">
@@ -58,8 +58,8 @@
                 <h4 class="color3">Ebay Search Results</h4>
             </div>
 
-            <div id="amznResults" class="cell small-5 large-expand results">
-                <h4 class="color3">Amazon search results</h4>
+            <div id="restaurantResults" class="cell small-5 large-expand results">
+                <h4 class="color3">Your Local Restaurants</h4>
             </div>
 
 
@@ -85,12 +85,3 @@
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
-
-<<<<<<< HEAD
-=======
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
-</body>
-</html>
->>>>>>> craiglist-api
