--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <h5>Favorited Items</h3>
                     <br>
                     <h4>Search</h4>
+                    <h6>Recent Searches</h6>
                     <select name="" id="searchedItems" aria-placeholder="Search"></select>
                   </div>       
                   <div class="bigscreen">
