add address to restaurants

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 movie/T.V recommendations for tonight.
               </p>
               <label>Zipcode</label>
-                <input id="zipcode" type="text" name="zipcode" placeholder="Zip Code" />
+                <input id="zipcode2" type="text" name="zipcode" placeholder="Zip Code" />
             </div>
             <div>
                 <label class="">Streaming Service</label>
@@ -85,7 +85,7 @@
             </select>
         </div>    
         <div class="smallbutton">
-          <button id="btn" class="button2 cell">Search</button>
+          <button id="btn2" class="button2 cell">Search</button>
        </div>   
     </section>
 
