--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <br>
                     <h4>Search</h4>
                     <h6>Recent Searches</h6>
-                    <select name="" id="searchedItems" aria-placeholder="Search"></select>
+                    <select id="searchedItems" aria-placeholder="Search">Recent Searches</select>
 
                   </div>       
                   <div class="bigscreen">
