select options returning info from API

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <label class="">Streaming Service
-                  <select id="streamingService">
+                  <select id="streamingService2">
                     <option value="netflix">Netflix</option>
                     <option value="disney">Disney+</option>
                     <option value="hulu">Hulu</option>
@@ -47,7 +47,7 @@
 
         <div class="cell small-6 search">
           <label class="">Genre
-            <select id="genre">
+            <select id="genre2">
               <option value="1">Biography</option>
               <option value="2">Film Noir</option>
               <option value="3">Game Show</option>
@@ -79,14 +79,14 @@
             </select>
           </label>
           <label>Movie/TV
-            <select id="mediaType">
+            <select id="mediaType2">
               <option value="series">TV Show</option>
               <option value="movie">Movie</option>
             </select>
           </label>
         </div>    
         <div class="smallbutton">
-          <button id="btn" class="button2 cell">Search</button>
+          <button id="btn2" class="button2 cell">Search</button>
        </div>   
     </section>
 
@@ -111,7 +111,7 @@
                     <select name="" id="searchedItems" aria-placeholder="Search"></select>
                   </div>       
                   <div class="bigscreen">
-                      <label class="">Streaming Service
+                      <label class="">Streaming Service</label>
                         <select id="streamingService">
                           <option value="netflix">Netflix</option>
                           <option value="disney">Disney+</option>
@@ -120,7 +120,7 @@
                           <option value="peacock">Peacock</option>
                           <option value="prime">Amazon Prime</option>
                         </select>
-                      </label>
+                      
                     <label class="">Genre
                       <select id="genre">
                         <option value="1">Biography</option>
