working recent searches for mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <label>Zipcode</label>
                 <input id="zipcode2" type="text" name="zipcode" placeholder="Zip Code" />
             </div>
+            <select id="searchedItems2">Recent Searches</select>
             <div>
                 <label class="">Streaming Service</label>
                   <select id="streamingService">
