clear media search and updated card css

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <main>
         <div class="grid-x">    
 
-            <div id="ebayResults" class="cell small-6 large-expand results grid-x">
+            <div id="mediaResults" class="cell small-6 large-expand results grid-x">
               <div class="title">
                 <h4 class="color3">What to Watch</h4>
               </div>
