final css/html touches for real this time

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header class="grid-x grid-padding-x">
+    <header class="grid-x grid-padding-x stars">
       <h1>A Night In</h1>
     </header>
     
@@ -99,7 +99,7 @@
         <button id="btn" class="cell myBtn">Search</button>
   </div>
 </div>
-    <!-- DESKTOP -->
+
     <main>
         <div class="grid-x">    
 
