--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       </p>
       <label>Enter Zipcode</label>
         <input id="zipcode" type="text" name="keyword" placeholder="Zip Code">
-      
+      <div>
+        <select id="searchedItems"></select>
+      </div>
     </div>       
     <div class="">
         <label class="">Streaming Service</label>
