add google map links, add icons, fix color changing rows

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Roboto:wght@400;700&family=Ubuntu:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -23,7 +24,7 @@
 
 <!-- Trigger/Open The Modal -->
 <div class="modalOpen">
-  <button id="myBtn" class="cell">Start Planning Your Night In</button>
+  <button id="myBtn" class="cell">Click Here To Start Planning Your Night In</button>
 </div>
 <!-- The Modal -->
 
@@ -100,13 +101,14 @@
 
             <div id="ebayResults" class="cell small-6 large-expand results grid-x">
               <div class="title">
-                <h4 class="color3">What to Watch</h4>
+                <h4 class="color3">What to Watch <span class="fas fa-film"></span></h4>
               </div>
 
               </div>
 
             <div id="restaurantResults" class="cell small-6 large-expand results">
-                <h4 class="color3">Where to Eat</h4>
+                <h4 class="color3">Where to Eat <span class="fas fa-pizza-slice"></span></h4>
+                
             </div>
             
         </div>
