added cards to own div/fixed errors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Trigger/Open The Modal -->
 <div class="modalOpen">
-  <button id="myBtn" class="cell">Click Here To Start Planning Your Night In</button>
+  <button id="myBtn" class="myBtn cell">Click Here To Start Planning Your Night In</button>
 </div>
 <!-- The Modal -->
 
@@ -107,7 +107,7 @@
     <main>
         <div class="grid-x">    
 
-            <div id="mediaResults" class="cell small-6 large-expand results grid-x">
+            <div id="mediaResults" class="cell small-6 large-expand results">
               <div class="title">
                 <h4 class="color3">What to Watch <span class="fas fa-film"></span></h4>
               </div>
