add error handling modal

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
       <select id="searchedItems"></select>
     </div>
         <button id="btn" class="cell myBtn">Search</button>
+        <!--error modal-->
+        <div id="errorModal" class="modal error-modal">
+          <p class="error-text" id="errorText"></p>
+        </div>
   </div>
 </div>
 
